HTML board setup, displayMoves setup

--- a/index.html
+++ b/index.html
@@ -8,7 +8,19 @@
     <title>Tic Tac Toe</title>
 </head>
 <body>
-    <div class="gameboard"></div>
+    <div class="boardcontainer">
+        <p>test</p>
+        <p>test</p>
+        <p>test</p>
+
+        <p>test</p>
+        <p>test</p>
+        <p>test</p>
+
+        <p>test</p>
+        <p>test</p>
+        <p>test</p>
+    </div>
 
     <script src="script.js"></script>
 </body>
