Module restructure, create player objs on submit

--- a/index.html
+++ b/index.html
@@ -8,18 +8,24 @@
     <title>Tic Tac Toe</title>
 </head>
 <body>
+    <h2>Tic Tac Toe</h2>
+    <p>Player 1 Name:</p>
+    <input type="text" id="player1" maxlength="20" value="X">
+    <p>Player 2 Name:</p>
+    <input type="text" id="player2" maxlength="20" value="O">
+    <button id="playerSubmit">Submit</button>
     <div class="boardcontainer">
-        <p>test</p>
-        <p>test</p>
-        <p>test</p>
+        <p id="0">test</p>
+        <p id="1">test</p>
+        <p id="2">test</p>
 
-        <p>test</p>
-        <p>test</p>
-        <p>test</p>
+        <p id="3">test</p>
+        <p id="4">test</p>
+        <p id="5">test</p>
 
-        <p>test</p>
-        <p>test</p>
-        <p>test</p>
+        <p id="6">test</p>
+        <p id="7">test</p>
+        <p id="8">test</p>
     </div>
 
     <script src="script.js"></script>
