Set up square click event, place token in gameDisplay

--- a/index.html
+++ b/index.html
@@ -14,19 +14,32 @@
     <p>Player 2 Name:</p>
     <input type="text" id="player2" maxlength="20" value="O">
     <button id="playerSubmit">Submit</button>
-    <div class="boardcontainer">
-        <p id="0">test</p>
-        <p id="1">test</p>
-        <p id="2">test</p>
+    
+    <div class="gamecontainer">
+        <div class="player1container">
+            <h3>Player One:</h3>
+        </div>
 
-        <p id="3">test</p>
-        <p id="4">test</p>
-        <p id="5">test</p>
+        <div class="boardcontainer">
+        <p id="0"></p>
+        <p id="1"></p>
+        <p id="2"></p>
 
-        <p id="6">test</p>
-        <p id="7">test</p>
-        <p id="8">test</p>
+        <p id="3"></p>
+        <p id="4"></p>
+        <p id="5"></p>
+
+        <p id="6"></p>
+        <p id="7"></p>
+        <p id="8"></p>
+        </div>
+
+        <div class="player2container">
+            <h3>Player Two:</h3>
+        </div>
     </div>
+
+    
 
     <script src="script.js"></script>
 </body>
